--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,12 +23,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Frase Diária"
+        android:onClick="gerarNovaFrase"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textResult"
         android:layout_width="355dp"
         android:layout_height="190dp"
         android:layout_marginTop="100dp"
